Sidebar starts recording video with mousedown, stops with mouseup. Webcam visibility indicates whether recording is occuring.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,28 @@
 body {
-  margin: 10px;
-  font: 15px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
 a {
   color: #00B7FF;
+}
+
+#content-area{
+    margin: 0 auto;
+    width: 800px;
+    display: inline-block;
+}
+
+#pdfdiv {
+}
+
+#record_bar {
+	width: 50px;
+	height: 585px;
+	border-width: 5px;
+	border-style: solid;
+	color: red;
+	display: inline-block;
 }
 
 #webcam_stream {
@@ -11,7 +30,9 @@ a {
   top: 10px;
   right: 10px;
   padding: 0;
+  visibility: visible;
 }
+
 
 #webcam_stream video {
   border: 2px solid #dcc;
